--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1115,6 +1115,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.\!text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1)) !important;
+}
+
 .opacity-0 {
   opacity: 0;
 }
