--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Variants for different colors */
+a.link-btn-primary {
+    @apply bg-blue-600 dark:bg-blue-500 text-white font-semibold py-2 px-4 rounded-lg hover:text-white hover:bg-blue-700 dark:hover:bg-blue-600 transition duration-300;
+}
+
+a.link-btn-secondary {
+    @apply bg-gray-300 dark:bg-gray-700 text-gray-800 dark:text-gray-200 font-semibold py-2 px-4 rounded-lg hover:text-gray-800 hover:bg-gray-400 dark:hover:bg-gray-600 transition duration-300;
+}
