--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -10,3 +10,49 @@ a.link-btn-primary {
 a.link-btn-secondary {
     @apply bg-gray-300 dark:bg-gray-700 text-gray-800 dark:text-gray-200 font-semibold py-2 px-4 rounded-lg hover:text-gray-800 hover:bg-gray-400 dark:hover:bg-gray-600 transition duration-300;
 }
+
+hr {
+    @apply border-t border-gray-300 dark:border-gray-700 mt-2 mb-5 h-0.5;
+  }
+  
+
+h1.entry-title {
+    @apply text-4xl font-bold text-black dark:text-blue-400 mb-4;
+}
+
+
+/* Typography adjustments */
+h2.wp-block-heading,h2.entry-title  {
+    @apply text-3xl font-bold text-black dark:text-blue-400 mb-4;
+  }
+  
+  h3.wp-block-heading {
+    @apply text-2xl font-semibold text-black dark:text-blue-300 mb-3;
+  }
+  
+  p {
+    @apply text-base text-gray-700 dark:text-gray-300 leading-relaxed mb-4;
+  }
+  
+  ul.wp-block-list, ol.wp-block-list {
+    @apply list-disc list-inside text-gray-700 dark:text-gray-300 mb-4;
+  }
+  
+  li {
+    @apply mb-2;
+  }
+  
+  
+  /* Image styles */
+  figure.wp-block-image {
+    @apply flex justify-center my-6;
+  }
+  
+  figure.wp-block-image img {
+    @apply rounded-lg shadow-lg border border-gray-200 dark:border-gray-700;
+  }
+  
+  /* Custom box shadow for images */
+  img.wp-image-141 {
+    @apply shadow-xl;
+  }
